app/styles/bubblestyle.module.css
@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Fira+Sans&family=Yeseva+One&display=swap');

.bubble-small { 
    @apply 
    flex flex-col flex-grow lg:w-64 w-36 h-32 items-center justify-center bg-wave-blue-200 rounded-t-xl
}

.bubbleBody {
    @apply
    relative flex flex-col flex-grow lg:w-60 w-44 mx-4 -my-8 h-[20rem] rounded-t-xl justify-center items-center transform transition-all duration-300 ease-linear
}

.bubble-big { 
    @apply 
    fixed flex w-72 h-56 mx-10 text-black rounded-lg shadow-xl bg-pink-500
}

.bubbleImage {
 @apply w-96 h-12 text-center rounded-t-xl scale-105
}

.addToCart {
  @apply flex lg:w-60 w-48 h-12 select-none items-center justify-center bottom-6 lg:-bottom-3 text-gray-600 bg-pastel-coral rounded-b-xl  shadow-gray-600 shadow-lg text-xl font-bold hover:bg-pastel-yellow font-sans-fira
}

